--- a/Week_07/src/main/resources/application.properties
+++ b/Week_07/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-#定义数据源组件  
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#定义数据源组件
 spring.datasource.url=jdbc:mysql://localhost:3306/learn?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 
+slave.datasource.url=jdbc:mysql://localhost:3306/learn-slave?useUnicode=true&characterEncoding=utf-8
+slave.datasource.username=root
+slave.datasource.password=root
