--- a/Week_07/src/main/resources/application.properties
+++ b/Week_07/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/learn?useUnicode=true&characte
 spring.datasource.username=root
 spring.datasource.password=root
 
-slave.datasource.url=jdbc:mysql://localhost:3306/learn-slave?useUnicode=true&characterEncoding=utf-8
+slave.datasource.url=jdbc:mysql://localhost:3310/learn?useUnicode=true&characterEncoding=utf-8
 slave.datasource.username=root
 slave.datasource.password=root
