--- a/Week_07/src/main/resources/application.properties
+++ b/Week_07/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #定义数据源组件
-spring.datasource.url=jdbc:mysql://localhost:3306/learn?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.master.jdbcUrl=jdbc:mysql://localhost:3306/learn?useUnicode=true&characterEncoding=utf-8
+spring.datasource.master.username=root
+spring.datasource.master.password=root
 
-slave.datasource.url=jdbc:mysql://localhost:3310/learn?useUnicode=true&characterEncoding=utf-8
-slave.datasource.username=root
-slave.datasource.password=root
+spring.datasource.slave.jdbcUrl=jdbc:mysql://localhost:3310/learn?useUnicode=true&characterEncoding=utf-8
+spring.datasource.slave.username=root
+spring.datasource.slave.password=root
+
